--- a/sites/all/themes/jac/css/styles.css
+++ b/sites/all/themes/jac/css/styles.css
@@ -83,7 +83,7 @@ h1,h2,h3,h4 {
 
 h1 {
 	font-size: 4em;
-	margin-bottom: 0.5em;
+	margin-bottom: 0;
 }
 
 aside h3 {
@@ -339,18 +339,16 @@ input[type="submit"] {
 ==========================================================**/
 
 header {
-	padding: 20px 0 0;
+	padding: 20px 0 40px;
 	background: #fff;
 }
 
 .logo {
-	font-family: 'CubanoRegular', Arial, sans-serif;
-	font-size: 6.5em; /* 100px */
-	line-height: 0.78em;
-	font-weight: normal;
 	text-align: center;
-	letter-spacing: 1px;
-	margin-bottom: 0;
+}
+
+.logo img {
+	width: 470px;
 }
 
 .logo span,
